@startuml

package Utils{
    enum Utils.Direction
    {
        None,
        Vertical,
        Horizontal,
        Diagonal,
        InverseDiagonal
    }

    class ClosedInterval <<ValueObject>>
    {
        -min : int
        -max : int
        
        +ClosedInterval(min : int, max : int)
        +Includes(value : int) : bool
        
        +ToString() : string
    }
    ClosedInterval <.. Domain.Coord
    ClosedInterval <.. Domain.Player
    
    class Utils.LimitedIntDialog
    {
        -title : string
        -limits : ClosedInterval
        
        +LimitedIntDialog(title: string, max: int)
        +LimitedIntDialog(title: string, min: int, max :int)
        
        +Read() : int
    }
    Utils.LimitedIntDialog ..> Utils.IO
    Utils.LimitedIntDialog ..> ClosedInterval
    
    class Utils.Coord
    {
        #Row : int {get, set}
        #Col : int {get, set}
        
        +DirectionRelativeTo(other : Coord) : Utils.Direction
        -IsInRow(other : Coord) : bool
        -IsInCol(other : Coord) : bool
        -IsInDiagonal() : bool
        
        +Equals(other: Coord)
    }
    Utils.Coord ..> Utils.Direction
}

package Domain{
    enum Color
    {
        None,
        X,
        O
    }
    Color <-- Player
    Color <.. Board
    
    class Domain.Coord
    {
        -{static} Dimension : int = 3 <<readonly>>
        -{field}{static} Limits : Utils.ClosedInterval = new(0, Dimension - 1) <<readonly>>
     
        -coord : Coord   
        +Read(title: string)
        
        +DirectionRelativeTo(other : Coord) : Utils.Direction <<override>>
        -IsInInverseDiagonal() : bool
    }
    Domain.Coord *-- Utils.Coord 
    Domain.Coord ..> Utils.Direction
    Domain.Coord ..> Utils.IO
    Domain.Coord ..> Utils.LimitedIntDialog
    
    class Board
    {
        -coordinates : Dictionary<int, HashSet<Coord>>
            
        +Board(numPlayers : int)
        
        +IsTicTacToe() : bool
        -IsTicTacToe(color : Color) : bool
        +IsComplete() : bool
        +IsTileEmpty(coord : Coord) : bool
        +IsTileFull(coord : Coord, color : Color) : bool
    
        +Put(coord : Coord, color : Color)
        +Remove(coord : Coord)    
        
        +Write()
    }
    Board ..> Utils.IO
    Board --> Domain.Coord
    
    class Player
    {
        ~color : Color
        
        +Player(playerIndex: int, numPlayers : int)
        +Put(board : Board)
        -Put(board : Board, title: string, fromCoord : Coord)
        +Move(board : Board)
        +Win()
    }
    Domain.Player --> Domain.Board
    Domain.Player ..> Utils.IO
    
    class Turn
    {
        -value : int = 0
        -players : Player[] [0..*]
        
        +Turn(players : Player[])
        
        +Current() : Player
        +Next() :Player
        +Change()
        
        +NextIndex() : int
    }
    Turn --> Player
    
    class TicTacToe
    {
        +PlayersCount : int = 2 {static} <<const>>
        
        -board : Board 
        -players : Player[] [0..*]
        -turn : Turn
        
        +TicTacToe()
        +Play()
    }
    TicTacToe --> Board
    TicTacToe --> Player
    TicTacToe --> Turn
    
    class Utils.IO <<static>>
    {
        +ReadString(title : string) : string {static}
        +ReadInt(title : string) : int {static}
        
        +Write(title : string) {static}
        +WriteLn() {static}
        +WriteError(format : string) {static}
    }
}

@enduml